# net-ops-agent

./: NOTABLE_CODE.md  README.md  main.py  pyproject.toml
src/: agent.py  app.py  tools.py
tests/: __init__.py  test_agent.py  test_tools.py
